# StellarRoute

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  FIXES_SUMMARY.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_644.md  Issues.md  PREFRENCES.md  README.md  Roadmap.md  TODO.md  UIDesign  issues.md  jest.config.js  tsconfig.json
.github/workflows/: ci.yml  deploy-mainnet.yml  deploy-testnet.yml  gas-benchmarks.yml  routing-benchmarks.yml  slo-probes.yml
.kiro/settings/: lsp.json
config/: pools-testnet.json  slo.yaml
crates/: api_errors.txt  routing_errors.txt
crates/api/: Cargo.toml
crates/api/benches/: cache_invalidation_load.rs  quote_serialization.rs
crates/api/migrations/: 0003_priority_queue.sql  0004_route_audit_log.sql  0005_quote_purger.sql  0011_contract_registry.sql
crates/api/proptest-regressions/replay/: diff.txt
crates/api/src/: admin_audit.rs  budget.rs  compression.rs  consistency_guard.rs  dependency_health.rs  docs.rs  error.rs  exactlyonce.rs  graph.rs  health_scheduler.rs  indexer_lag.rs  kill_switch.rs  lib.rs  liquidity_alerts.rs  metrics.rs  ordering.rs  reconciliation.rs  serialization.rs  server.rs  shutdown.rs  simulation.rs  state.rs  tracing_config.rs  webhooks.rs
crates/api/src/audit/: mod.rs  redactor.rs  schema.rs  store.rs  writer.rs
crates/api/src/cache/: adaptive_ttl.rs  invalidation.rs  invalidation_graph.rs  jitter.rs  mod.rs  prewarm_job.rs  prewarmer.rs
crates/api/src/load_test/: harness.rs  mod.rs
crates/api/src/middleware/: admin.rs  api_versioning.rs  auth.rs  deprecation.rs  mod.rs  rate_limit.rs  request_id.rs  tracing.rs  validation.rs
crates/api/src/models/: request.rs  response.rs
crates/api/src/purger/: config.rs  mod.rs
crates/api/src/regions/: router.rs
crates/api/src/replay/: artifact.rs  capture.rs  diff.rs  engine.rs  mod.rs  redactor.rs
crates/api/src/routes/: activity.rs  admin.rs  admin_cache.rs  assets.rs  canary.rs  contract_registry.rs  health.rs  idempotent_quote.rs  integrator_webhooks.rs  kill_switch.rs  metrics.rs  mod.rs  orderbook.rs  pairs.rs  price_history.rs  prometheus.rs  quote.rs  replay.rs  routes_endpoint.rs  simulation_route.rs
crates/api/src/routes/ws/: broadcaster.rs  connection.rs  messages.rs  mod.rs  registry.rs
crates/api/src/worker/: job.rs  mod.rs  pool.rs  priority.rs  queue.rs
crates/api/tests/: activity_integration.rs  adaptive_ttl_integration.rs  assets_integration.rs  audit_log_integration.rs  batch_quote_integration.rs  budget_enforcement_test.rs  cache_flush_integration.rs  conformance.rs  consistency_guard_test.rs  contract_registry_integration.rs  deprecation_headers_integration.rs  deterministic_ordering_test.rs  deterministic_serialization_test.rs  freshness_guardrails.rs  harness_integration.rs  health_integration.rs  idempotent_quote_integration.rs  kill_switch_integration.rs  orderbook_batch_integration.rs  pairs_integration.rs  priority_queue_test.rs  purger_tests.rs  quote_integration.rs  quote_load_test.rs  rate_limit_integration.rs  reconciliation_test.rs  request_id_integration.rs  routes_integration.rs  simulation_route_integration.rs  validation_integration.rs  ws_integration.rs
crates/contracts/: Cargo.toml  gas_baselines.json
crates/indexer/: Cargo.toml
crates/indexer/migrations/: 0008_soroban_discovery_cursors.sql  0009_finalize_unified_liquidity.sql  0010_asset_metadata.sql  0010_trace_context_provenance.sql  0012_contract_swap_activity.sql  0012_notify_liquidity_update.sql  0013_amm_pools.sql
crates/indexer/src/: activity.rs  amm.rs  asset_metadata.rs  deduplication.rs  error.rs  lib.rs  metrics.rs  partition.rs  sdex.rs  shutdown.rs  soroban.rs  telemetry.rs
crates/indexer/src/config/: mod.rs
crates/indexer/src/db/: connection.rs
crates/indexer/src/horizon/: backpressure.rs  client.rs  mod.rs
crates/indexer/src/models/: offer.rs
crates/indexer/src/reconciliation/: backfill.rs  mod.rs
crates/indexer/tests/: deduplication_integration.rs  horizon_backpressure_test.rs  integration_test.rs
crates/routing/: Cargo.toml  README_FIXTURES.md
crates/routing/benches/: deterministic_regression_benchmark.rs  hybrid_optimizer_benchmarks.rs  routing_benchmarks.rs
crates/routing/fixtures/: minimal_market.json
crates/routing/src/: adaptive_routing.rs  adaptive_timeout.rs  amm_fallback.rs  canary.rs  compaction.rs  consensus.rs  error.rs  execution_quality.rs  fixtures.rs  lib.rs  normalization.rs  optimizer.rs  pathfinder.rs  policy.rs  regression.rs  risk.rs  scorer.rs  simulator.rs  snapshot.rs
crates/routing/src/health/: anomaly.rs  circuit_breaker.rs  filter.rs  mod.rs  policy.rs  scorer.rs
crates/routing/tests/: amm_math.rs  anomaly_tests.rs  graph_fixtures_integration.rs  hybrid_optimizer_tests.rs  pathfinding_latency_gate.rs  risk_limits_integration.rs
crates/sdk-rust/: README.md
docs/: CONSISTENCY_STRATEGY.md  QUOTE_PURGER_IMPLEMENTATION.md  QUOTE_PURGER_RUNBOOK.md  README.md  RUNBOOK_KILL_SWITCH.md  audit-log-retention.md  indexer-lag-monitoring.md  key_rotation.md  monitoring.md  routing_canary.md  swap-e2e-flow.md
docs/api/: README.md  canonical_pair_ordering.md  error_taxonomy.md  integrator-error-guide.md  integrator-guide.md  openapi.yaml  routes_endpoint.md  v1-migration-guide.md  versioning-policy.md  versioning.md  websocket.md
docs/architecture/: MULTI_REGION_RUNBOOK.md  README.md  (+3 more)
frontend/: .env.example  .gitignore  STORYBOOK.md  eslint_output.txt  ladle-vite.config.ts  lint.json  lint_utf8.json  next.config.ts  package-lock.json  package.json  perf-baseline.json  perf-budget.json  playwright.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
scripts/: db-register-pool.sh  extend-ttl.sh  register-pools.sh  setup.sh  slo-probe.sh  smoke-test-testnet.sh  test-ttl-alert.sh  wait-for-dbs.sh  wait-for-services.sh
sdk-js/: README.md  package-lock.json
(+412 files in other folders)
