[workspace]
members = [
    "crates/indexer",
    "crates/api",
    "crates/routing",
    "crates/contracts",
    "crates/sdk-rust",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["StellarRoute Contributors"]
repository = "https://github.com/stellarroute/stellarroute"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and distributed tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }
opentelemetry-http = "0.10"

# HTTP/API
reqwest = { version = "0.11", features = ["json"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = [
    "cors",
    "compression-gzip",
    "trace",
] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "uuid",
    "rust_decimal",
] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Configuration
config = "0.13"

# Caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Concurrency utilities
parking_lot = "0.12"
arc-swap = "1.7"
dashmap = "5.5"
rand = "0.8"
proptest = "1.5"
httpdate = "1.0"

# Clippy and formatting
[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"
