[package]
name = "stellarroute-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "stellarroute-api"
path = "src/bin/stellarroute-api.rs"

[[bin]]
name = "replay-cli"
path = "src/bin/replay_cli.rs"

[[bin]]
name = "m2-readiness"
path = "src/bin/m2_readiness.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-http.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
config.workspace = true
redis.workspace = true
reqwest.workspace = true
rand.workspace = true

# Internal dependencies
stellarroute-indexer = { path = "../indexer" }
stellarroute-routing = { path = "../routing" }

# API documentation
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# Concurrency utilities
parking_lot = "0.12"
arc-swap = { workspace = true }
dashmap = "5.5"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Async utilities
futures-util = "0.3"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
proptest.workspace = true
tokio-tungstenite = "0.20"
futures-util = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
wiremock = "0.6"

[[bench]]
name = "quote_serialization"
harness = false
