[package]
name = "stellarroute-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "stellarroute-indexer"
path = "src/bin/stellarroute-indexer.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
reqwest.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
config.workspace = true

futures = "0.3"
rust_decimal = { version = "1.33", features = ["db-postgres"] }
rand.workspace = true
httpdate = "1.0"
prometheus = "0.13"
lazy_static = "1.4"
toml = "0.8"

# Stellar SDK (TBD - need to find correct package)
# stellar-sdk = "?"

# Add other indexer-specific dependencies here

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
